gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16523.d
version https://git-lfs.github.com/spec/v1
oid sha256:2c0d65a8e444ef2c85d4a929b16f06c96e38ad02ea5dc3ee62a01570b3cb2c8e
size 219
